--- a/auth.html
+++ b/auth.html
@@ -1,1 +1,15 @@
-test
+<!DOCTYPE html>
+<html>
+
+<head>
+    <script src="auth.js"></script>
+</head>
+
+<body>
+    Redirecting...
+    <script>
+
+    </script>
+</body>
+
+</html>
