--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet" />
+        <script src="auth.js"></script>
     </head>
     <body>
 
