--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Music Compatiblilty Checker</h1>
     <div id="results">
-        <div class="circular-progress" data-progress-color="green" data-bg-color="red">
+        <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="black">
             <div class="inner-circle"></div>
             <p class="percentage">0%</p>
         </div>
