--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
     <h1>Music Compatiblilty Checker</h1>
     <div id="results">
-        <div style="display: inline-block;"><div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
-            <div class="inner-circle"></div>
-            <p class="percentage">0%</p>
-        </div></div>
+        <div style="display: inline-block;">
+            <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
+                <div class="inner-circle"></div>
+                <p class="percentage">0%</p>
+            </div>
+        </div>
         <div id="samesongs">
             <h1>Same Songs</h1>
         </div>
