--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class="inner-circle"></div>
                 <p class="percentage">0%</p>
             </div>
+            <div id="sameartists"><h1>Same Artists</h1></div>
         </div>
         <div id="samesongs">
             <h1>Same Songs</h1>
