--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
                 <div class="inner-circle"></div>
                 <p class="percentage">0%</p>
+                <p style="font-size: 10px;">match</p>
             </div>
-            <div id="sameartists"><h1>Same Artists</h1></div>
+            <h1>Same Artists</h1>
+            <div id="sameartists"></div>
         </div>
         <div id="samesongs">
             <h1>Same Songs</h1>
