--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Music Compatiblilty Checker</h1>
-    <div id="results">
+    <div id="results" style="display: none;">
         <div style="display: inline-block;">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
                 <div class="inner-circle"></div>
