--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Music Compatiblilty Checker</h1>
-    <div id="results" style="display: none;width: 30%;">
-        <div style="display: inline-block;">
+    <div id="results" style="display: none;">
+        <div style="display: inline-block;width: 30%;">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
                 <div class="inner-circle"></div>
                 <p class="percentage">0%</p>
@@ -20,9 +20,9 @@
             <h1>Same Artists</h1>
             <div id="sameartists"></div>
         </div>
-    </div>
-    <div id="samesongs">
-        <h1>Same Songs</h1>
+        <div id="samesongs">
+            <h1>Same Songs</h1>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
