basic playlist selector

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
 <body>
     <h1>Music Compatiblilty Checker</h1>
+    <div id="chooser">
+        <div id="inputs">
+            <input placeholder="Playlist URL">
+            <input placeholder="Playlist URL">
+        </div>
+        <button onclick="addList()">Add List</button>
+        |
+        <button onclick="start()">Start</button>
+    </div>
     <div id="results" style="display: none;">
         <div style="display: inline-block;width: 30%;">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
