--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
         <button onclick="start()">Start</button>
     </div>
     <div id="results" style="display: none;">
+        <div id="samegenres"></div>
         <div style="display: inline-block;width: 30%;">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
                 <div class="inner-circle"></div>
                 <p class="percentage">0%</p>
             </div>
-            <h1>Same Artists</h1>
+            <h1>Artists</h1>
             <div id="sameartists"></div>
         </div>
         <div id="samesongs">
-            <h1>Same Songs</h1>
+            <h1>Songs</h1>
         </div>
     </div>
 </body>
