--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button onclick="start()">Start</button>
     </div>
     <div id="results" style="display: none;">
+        <h2>You both like</h2>
         <div id="samegenres"></div>
         <div style="display: inline-block;width: 30%;">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
