--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         |
         <button onclick="start()">Start</button>
     </div>
+    <div id="progress">
+        <h2 id="statust">Getting playlists...</h2>
+        <progress id="progbar" max="0" value="0"></progress>
+    </div>
     <div id="results" style="display: none;">
         <h2>You both like</h2>
         <div id="samegenres"></div>
