--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         |
         <button onclick="start()">Start</button>
     </div>
-    <div id="progress">
+    <div id="progress" style="display: none;">
         <h2 id="statust">Getting playlists...</h2>
         <progress id="progbar" max="0" value="0"></progress>
     </div>
