--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div style="display: inline-block;width: 30%;">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
                 <div class="inner-circle"></div>
-                <p class="percentage">0%</p>
+                <p class="percentage">0% match</p>
             </div>
             <h1>Artists</h1>
             <div id="sameartists"></div>
