--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" />
-    <title>Music Compatiblilty Checker</title>
+    <title>Music Compatibilty Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="auth.js"></script>
 </head>
 
 <body>
-    <h1>Music Compatiblilty Checker</h1>
+    <h1>Music Compatibilty Checker</h1>
     <div id="chooser">
         <div id="inputs">
             <input placeholder="Playlist URL">
