show songs by artist

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             <h1>Artists</h1>
             <div id="sameartists"></div>
         </div>
-        <div id="samesongs">
+        <div class="samesongs">
             <h1>Songs</h1>
+            <div id="samesongs"></div>
         </div>
     </div>
 </body>
