add mobile support

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="results" style="display: none;">
         <h2>You both like</h2>
         <div id="samegenres"></div>
-        <div style="display: inline-block;width: 30%;">
+        <div class="left">
             <div class="circular-progress" data-progress-color="lightgreen" data-bg-color="red">
                 <div class="inner-circle"></div>
                 <p class="percentage">0% match</p>
