--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" />
     <title>Music Compatibilty Checker</title>
+    <meta name="google-site-verification" content="LKIThRhzjIXHbuJDOimsoB5O4Bb4eMFMp-YgYNFAG1M" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="auth.js"></script>
 </head>
