add user playlist selector

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
     <h1>Music Compatibilty Checker</h1>
     <div id="chooser">
+        <h2>My playlists</h2>
+        <div id="myLists"></div>
+        <h2>By URL</h2>
         <div id="inputs">
         </div>
-        <button onclick="addList()">Add List</button>
+        <button onclick="addList()">+</button>
         |
         <button onclick="start()">Start</button>
     </div>
