--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Music Compatibilty Checker</h1>
     <div id="chooser">
         <h2>My playlists</h2>
-        <div id="myLists"></div>
+        <div id="myLists">Loading...</div>
         <h2>By URL</h2>
         <div id="inputs">
         </div>
