--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>Music Compatibilty Checker</h1>
+    <p>for Spotify</p>
     <div id="chooser">
         <h2>My playlists</h2>
         <div id="myLists">Loading...</div>
